--- a/participantes/pedro-teixeira.yaml
+++ b/participantes/pedro-teixeira.yaml
@@ -1,5 +1,5 @@
 # Este é o modelo para criar seu site no Kubernetes.
-# Você só precisa se preocupar em alterar a MENSAGEM_CUSTOMIZADA.
+# O participante só precisa se preocupar em alterar a MENSAGEM.
 
 apiVersion: apps/v1
 kind: Deployment
@@ -25,19 +25,15 @@ spec:
           # ================================================================ #
           # >> ÚNICA LINHA PARA ALTERAR <<
           # Troque a frase abaixo pela sua mensagem personalizada!
-          value: "Site de Pedro Teixeira"
+          value: "Bem-vindo ao Workshop de Kubernetes! Pedro Teixeira"
           # ================================================================ #
-
 ---
-# Esta parte expõe seu site para que possamos acessá-lo.
-# Não é necessário alterar nada aqui.
-
 apiVersion: v1
 kind: Service
 metadata:
   name: meu-servico
 spec:
-  type: NodePort # Tipo de serviço que expõe a aplicação em uma porta no nó do cluster
+  type: NodePort
   selector:
     app: meu-site
   ports:
