--- a/participantes/pedro-teixeira.yaml
+++ b/participantes/pedro-teixeira.yaml
@@ -2,56 +2,82 @@
 # INSTRUÇÕES PARA O WORKSHOP - SIGA OS 2 PASSOS ABAIXO:
 # ==============================================================================
 
-# PASSO 1: DAR UM NOME ÚNICO AO SEU CAMINHO/SITE
+# PASSO 1: DAR UM NOME ÚNICO AO SEU SITE
 #   - Pressione 'Ctrl+H' para abrir "Localizar e Substituir".
-#   - No campo "Localizar", digite: site-pedroteixeira
+#   - No campo "Localizar", digite: pedro-teixeira
 #   - No campo "Substituir", digite um nome único para você (ex: pedro-teixeira).
 #   - Clique em "Substituir Todos".
 
 # PASSO 2: ALTERAR A SUA MENSAGEM
-#   - Encontre a linha que começa com "value:" e altere a mensagem.
+#   - Encontre a linha que começa com "  index.html:" e altere a mensagem.
+#   - Você pode usar tags HTML como <h1> para títulos e <p> para parágrafos!
 # ==============================================================================
 
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: pedro-teixeira-config
+data:
+  index.html: |
+    <!DOCTYPE html>
+    <html>
+    <head>
+      <title>Workshop K8s</title>
+      <style>
+        body { font-family: Arial, sans-serif; text-align: center; margin-top: 50px; background-color: #282c34; color: white;}
+        h1 { color: #61dafb; }
+      </style>
+    </head>
+    <body>
+      <h1>Bem-vindo ao Workshop de Kubernetes! Site do Pedro Teixeira</h1>
+      <p>Esta mensagem foi customizada por mim!</p>
+    </body>
+    </html>
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: site-pedroteixeira
+  name: pedro-teixeira
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: site-pedroteixeira
+      app: pedro-teixeira
   template:
     metadata:
       labels:
-        app: site-pedroteixeira
+        app: pedro-teixeira
     spec:
       containers:
       - name: web
-        image: nginxdemos/hello:plain-text
+        image: nginx:latest # Usando a imagem oficial e estável do NGINX
         ports:
         - containerPort: 80
-        env:
-        - name: HELLO_TEXT
-          value: "Bem-vindo ao Workshop de Kubernetes! Site do Pedro Teixeira"
+        volumeMounts: # Monta o nosso arquivo de mensagem dentro do container
+        - name: html-volume
+          mountPath: /usr/share/nginx/html/index.html
+          subPath: index.html
+      volumes: # Define o volume usando o nosso ConfigMap
+      - name: html-volume
+        configMap:
+          name: pedro-teixeira-config
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: site-pedroteixeira-service
+  name: pedro-teixeira-service
 spec:
   type: ClusterIP
   selector:
-    app: site-pedroteixeira
+    app: pedro-teixeira
   ports:
   - port: 80
     targetPort: 80
 ---
-
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: site-pedroteixeira-ingress
+  name: pedro-teixeira-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
@@ -59,10 +85,10 @@ spec:
   rules:
   - http:
       paths:
-      - path: /site-pedroteixeira
+      - path: /pedro-teixeira
         pathType: Prefix
         backend:
           service:
-            name: site-pedroteixeira-service
+            name: pedro-teixeira-service
             port:
               number: 80
