--- a/participantes/fer-pilon.yaml
+++ b/participantes/fer-pilon.yaml
@@ -5,7 +5,7 @@
 
 # PASSO 1: DAR UM NOME ÚNICO AO SEU SITE
 #   - Pressione 'Ctrl+F' para abrir "Localizar e Substituir".
-#   - No campo "Localizar", digite: nome-unico-aqui
+#   - No campo "Localizar", digite: fer-pilon
 #   - No campo "Substituir", digite um nome único para você.
 #     IMPORTANTE: Use apenas letras minúsculas, números e hífens.
 #     Exemplos válidos: charles-alencar, pedro-teixeira, site-da-ana
@@ -18,7 +18,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: NOME-UNICO-AQUI-config
+  name: fer-pilon-config
 data:
   index.html: |
     <!DOCTYPE html>
@@ -39,16 +39,16 @@ data:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: NOME-UNICO-AQUI
+  name: fer-pilon
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: NOME-UNICO-AQUI
+      app: fer-pilon
   template:
     metadata:
       labels:
-        app: NOME-UNICO-AQUI
+        app: fer-pilon
     spec:
       containers:
       - name: web
@@ -62,16 +62,16 @@ spec:
       volumes: # Define o volume usando o nosso ConfigMap
       - name: html-volume
         configMap:
-          name: NOME-UNICO-AQUI-config
+          name: fer-pilon-config
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: NOME-UNICO-AQUI-service
+  name: fer-pilon-service
 spec:
   type: ClusterIP
   selector:
-    app: NOME-UNICO-AQUI
+    app: fer-pilon
   ports:
   - port: 80
     targetPort: 80
@@ -79,7 +79,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: NOME-UNICO-AQUI-ingress
+  name: fer-pilon-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
@@ -87,10 +87,10 @@ spec:
   rules:
   - http:
       paths:
-      - path: /NOME-UNICO-AQUI
+      - path: /fer-pilon
         pathType: Prefix
         backend:
           service:
-            name: NOME-UNICO-AQUI-service
+            name: fer-pilon-service
             port:
               number: 80
