--- a/participantes/pedro-teixeira.yaml
+++ b/participantes/pedro-teixeira.yaml
@@ -30,8 +30,8 @@ data:
       </style>
     </head>
     <body>
-      <h1>Bem-vindo ao Workshop de Kubernetes!</h1>
-      <p>Esta mensagem foi customizada por mim!</p>
+      <h1>FLAMENGO CAMPEAO MUNDIAL!</h1>
+      <p>01 BRASIL!</p>
     </body>
     </html>
 ---
