--- a/participantes/vitoria-barbero.yaml
+++ b/participantes/vitoria-barbero.yaml
@@ -4,7 +4,7 @@
 
 # PASSO 1: DAR UM NOME ÚNICO AO SEU SITE
 #   - Pressione 'Ctrl+F' para abrir "Localizar e Substituir".
-#   - No campo "Localizar", digite: Vivi teste tech day
+#   - No campo "Localizar", digite: vivi-teste-techday
 #   - No campo "Substituir", digite um nome único para você.
 #     IMPORTANTE: Use apenas letras minúsculas, números e hífens.
 #     Exemplos válidos: charles-alencar, pedro-teixeira, site-da-ana
@@ -17,7 +17,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: Vivi teste tech day-config
+  name: vivi-teste-techday-config
 data:
   index.html: |
     <!DOCTYPE html>
@@ -38,16 +38,16 @@ data:
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: Vivi teste tech day
+  name: vivi-teste-techday
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: Vivi teste tech day
+      app: vivi-teste-techday
   template:
     metadata:
       labels:
-        app: Vivi teste tech day
+        app: vivi-teste-techday
     spec:
       containers:
       - name: web
@@ -61,16 +61,16 @@ spec:
       volumes: # Define o volume usando o nosso ConfigMap
       - name: html-volume
         configMap:
-          name: Vivi teste tech day-config
+          name: vivi-teste-techday-config
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: Vivi teste tech day-service
+  name: vivi-teste-techday-service
 spec:
   type: ClusterIP
   selector:
-    app: Vivi teste tech day
+    app: vivi-teste-techday
   ports:
   - port: 80
     targetPort: 80
@@ -78,7 +78,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: Vivi teste tech day-ingress
+  name: vivi-teste-techday-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
@@ -86,10 +86,10 @@ spec:
   rules:
   - http:
       paths:
-      - path: /Vivi teste tech day
+      - path: /vivi-teste-techday
         pathType: Prefix
         backend:
           service:
-            name: Vivi teste tech day-service
+            name: vivi-teste-techday-service
             port:
               number: 80
