--- a/participantes/igor-rodrigues.yaml
+++ b/participantes/igor-rodrigues.yaml
@@ -31,7 +31,7 @@ data:
     </head>
     <body>
       <h1>Bem-vindo ao Workshop de Kubernetes!</h1>
-      <p>Esta mensagem foi customizada por mim!</p>
+      <p>CCM Tech Day</p>
     </body>
     </html>
 ---
