--- a/participantes/patrick-esteves.yaml
+++ b/participantes/patrick-esteves.yaml
@@ -30,7 +30,7 @@ data:
       </style>
     </head>
     <body>
-      <h1>Site Macanudo do Patrick Tche!</h1>
+      <h1>Site Bagual do Patrick Tche!</h1>
       <p>Esta mensagem foi customizada pelos guri!</p>
     </body>
     </html>
