--- a/participantes/bruno-mariano.yaml
+++ b/participantes/bruno-mariano.yaml
@@ -4,7 +4,7 @@
 
 # PASSO 1: DAR UM NOME ÚNICO AO SEU SITE
 #   - Pressione 'Ctrl+F' para abrir "Localizar e Substituir".
-#   - No campo "Localizar", digite: nome-unico-aqui
+#   - No campo "Localizar", digite: bruno-mariano
 #   - No campo "Substituir", digite um nome único para você.
 #     IMPORTANTE: Use apenas letras minúsculas, números e hífens.
 #     Exemplos válidos: charles-alencar, pedro-teixeira, site-da-ana
@@ -17,7 +17,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: NOME-UNICO-AQUI-config
+  name: bruno-mariano-config
 data:
   index.html: |
     <!DOCTYPE html>
@@ -31,23 +31,23 @@ data:
     </head>
     <body>
       <h1>Bem-vindo ao Workshop de Kubernetes!</h1>
-      <p>Esta mensagem foi customizada por mim!</p>
+      <p>Esta mensagem foi customizada por BMariano!</p>
     </body>
     </html>
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: NOME-UNICO-AQUI
+  name: bruno-mariano
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: NOME-UNICO-AQUI
+      app: bruno-mariano
   template:
     metadata:
       labels:
-        app: NOME-UNICO-AQUI
+        app: bruno-mariano
     spec:
       containers:
       - name: web
@@ -61,16 +61,16 @@ spec:
       volumes: # Define o volume usando o nosso ConfigMap
       - name: html-volume
         configMap:
-          name: NOME-UNICO-AQUI-config
+          name: bruno-mariano-config
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: NOME-UNICO-AQUI-service
+  name: bruno-mariano-service
 spec:
   type: ClusterIP
   selector:
-    app: NOME-UNICO-AQUI
+    app: bruno-mariano
   ports:
   - port: 80
     targetPort: 80
@@ -78,7 +78,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: NOME-UNICO-AQUI-ingress
+  name: bruno-mariano-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
@@ -86,10 +86,10 @@ spec:
   rules:
   - http:
       paths:
-      - path: /NOME-UNICO-AQUI
+      - path: /bruno-mariano
         pathType: Prefix
         backend:
           service:
-            name: NOME-UNICO-AQUI-service
+            name: bruno-mariano-service
             port:
               number: 80
